# inductive-graph-algorithms

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
graph/: collections.py  inductivegraph.py  tools.py  transforms.py
tests/: test_tools.py  test_transforms.py
tests/test_collections/: test_immutable_heap.py  test_tree.py
tests/test_inductivegraph/: conftest.py  test_algorithms.py  test_constructors.py  test_functions.py
